<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdPageSend"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <TextView
        android:textSize="30sp"
        android:id="@+id/TV_infoDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:text="@string/mainPageMacHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>

    <EditText
        android:enabled="false"
        android:id="@+id/receive_mac"
        android:layout_height="60dp"
        tools:ignore="LabelFor,MissingConstraints"
        android:layout_width="match_parent"
        />
    <TextView
        android:text="@string/broadCastType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>
    <Spinner
        android:id="@+id/broadType"
        android:layout_width="match_parent"
        android:spinnerMode="dialog"
        android:layout_height="60dp"/>
    <TextView
        android:text="@string/powerTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>
    <Spinner
        android:id="@+id/powerChange"
        android:layout_width="match_parent"
        android:spinnerMode="dialog"
        android:layout_height="60dp"/>
    <TextView
        android:text="上报频率"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>
    <EditText
        android:id="@+id/reportingFre"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        tools:ignore="MissingConstraints"
        android:inputType="number" />
    <TextView
        android:text="电量阈值"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>
    <EditText
        android:id="@+id/powerThreshold"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="number"
        tools:ignore="MissingConstraints" />
    <TextView
        android:text="移动信号阈值"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>
    <EditText
        android:id="@+id/signalThreshold"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="number"
        tools:ignore="MissingConstraints"
        />
    <Button
        android:id="@+id/Btn_startSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="配置设备"
        tools:ignore="MissingConstraints,OnClick"
        />

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="退出配置"/>
</LinearLayout>